--- a/code/style.css
+++ b/code/style.css
@@ -24,7 +24,7 @@ header {
   text-decoration: none;
 }
 
-a:link, a:visited, a:focus {
+a:visited, a:focus {
 border: 2px solid black;
 color: #637c85;
 
