--- a/code/style.css
+++ b/code/style.css
@@ -218,12 +218,11 @@ footer {
   align-items: center;
   background-color: peachpuff;
   height: 100px;
-  /* border-top-style: solid; */
   padding: 20px;
 }
 
-.footer-text {
-  justify-content: flex-start;
+.footer-logo {
+  width: 75px;
 }
 
 i {
