added info in README

--- a/style.css
+++ b/style.css
@@ -154,6 +154,11 @@ footer p a:visited {
   color: black;
 }
 
+.linkfooter {
+  color: black;
+  padding: 0.2rem;
+}
+
 /* styling for tablet */
 @media (min-width:668px) and (max-width:1024px){
   .big1, .big2 {
