--- a/code/style.css
+++ b/code/style.css
@@ -5,9 +5,8 @@ html {
   color: black;
   font-family: Helvetica, sans-serif, Arial,;
   font-size: 12px;
-  background-color: slategray;
-  animation-name: example;
-  animation-duration: 4s;
+  background-color: white;
+  
 }
 
 .logo {
@@ -42,14 +41,13 @@ li{
   position: -webkit-sticky;
   border-right: 20px;
 }
-html {
-  background-color: lightgray;
-  animation-name: example;
-  animation-duration: 4s;
+h2:hover {
+  background-color: #254e58;
 }
+
 .big-news{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin: 10px 20px;
   padding: 20px;
   margin-right:10px;
@@ -60,8 +58,13 @@ html {
 }
 
 .big-news-image{
-  width: 95%;
+  width: 100%;
   
+}
+.text-container{
+  display: flex;
+  flex-direction:column;
+
 }
 
 .big-news-text{
@@ -69,6 +72,7 @@ html {
   margin: 5px;
   flex-grow: 1;
   justify-content: center;
+  padding: 10px;
 }
 
 .flex-box {
@@ -78,9 +82,6 @@ html {
 
 }
 
-.big-news picture {
-  max-width: 50%;
-}
 .flex-parent {
 
   height: 800px;
@@ -101,46 +102,56 @@ html {
   width: 300px;
   flex-grow: 1;
   padding: 10px;
-  
-}/*
-.flex-child {
-  margin: 15px;
-  border: 2px solid #254e58;
-  border-radius: 5px;
-  height: 300px;
-  width: 320px;
-}*/
-.blue{
-  border: 2px solid #254e58;
 
+  background-color: white;
+  animation-name: example;
+  animation-duration: 4s;
+  
 }
+@keyframes example {
+  0%   {background-color: white;}
+  25%  {background-color: rgb(162, 187, 113);}
+  50%  {background-color: rgb(76, 117, 76);}
+  100% {background-color: teal;}
+}
+
+.flex-child img {
+  background-size: contain;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 200px;
+}
+
 .p{
   color: black;
   text-align: right;
 }
+/*
 @keyframes example {
   from {background-color: lightgray;}
   to {background-color: white;}
-}
+}*/
 
 
-/*@media (max-width:767px) {
+@media (max-width:767px) {
   #navigation-bar{
     display:none;
-  } {
+  } 
   .header{
     flex-direction: row;
     text-align: right;
   }
   .big-news{
-    flex-direction: row;
+    flex-direction: column;
   }
   .flex-parent{
     grid-template-columns: repeat(2, 1fr);
     gap: 0 20px;
   }
+}
 @media (min-width:992px) {
   .flex-parent{
     grid-template-columns: repeat(4, 1fr);
   }
-}*/
+}
